12-egress-communication/istio-setup/VirtualService_Egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apic-egress-vs
  namespace: istio-system
spec:
  hosts:
  - external.istiodemo
  gateways:
  - istio-egressgateway
  - mesh
  http:
  - match:
    - gateways:
      - mesh
      port: 32172
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        port:
          number: 80
      weight: 100  
  - match:
    - gateways:
      - istio-egressgateway 
      port: 80
    route:
    - destination:
        host: external.istiodemo
        port: 
          number: 32172
      weight: 100
